<resources>
    <string name="app_name" translatable="false">BundlePesa</string>
    <string name="amount_hint">Enter Amount</string>
    <string name="btn_next_text">NEXT</string>
    <string name="til_bundle_option_hint">Select Bundle Option</string>
    <string name="til_select_contact_hint">Select Contact</string>
    <string name="initialProcessingMessage">Please wait…</string>
    <string name="author" translatable="false"><a href="https://davidamunga.com">David Amunga</a></string>

</resources>
